# twitter-conduit

./: .gitignore  .travis.yml  CHANGES  ChangeLog.md  LICENSE  README  README.md  Setup.hs  Warning.hs  cabal.project  enumerator-twitter-userstream.cabal  fourmolu.yaml  stack-lts-2.yml  stack-lts-3.yml  twitter-conduit.cabal  twitter-enumerator.cabal
.github/workflows/: format.yml  haskell.yml
.travis/: check-sdist.sh  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-8.yaml
Web/: Twitter.hs
Web/Twitter/: Api.hs  Conduit.hs  Enumerator.hs  Fetch.hs  Monad.hs  Post.hs  Query.hs  Status.hs  Stream.hs  Types.hs  Utils.hs
Web/Twitter/Conduit/: Api.hs  Base.hs  CommonParameters.hs  Cursor.hs  Error.hs  Fetch.hs  Lens.hs  Monad.hs  Param.hs  Parameters.hs  ParametersDeprecated.hs  ParametersTH.hs  Post.hs  Query.hs  Request.hs  Response.hs  Status.hs  Stream.hs  Types.hs  Utils.hs
Web/Twitter/Conduit/Legacy/: Api.hs  Status.hs
Web/Twitter/Conduit/Parameters/: Internal.hs  TH.hs
Web/Twitter/Conduit/Request/: Internal.hs
Web/Twitter/Conduit/Types/: Lens.hs  TH.hs
Web/Twitter/Enumerator/: Api.hs  Fetch.hs  Monad.hs  Post.hs  Status.hs  Types.hs  Utils.hs
attic/: genRawApi.hs
sample/: Common.hs  Secret.hs  Twitter2Notify.hs  fav.hs  oauth_callback.hs  oauth_pin.hs  oslist.hs  post.hs  postWithMedia.hs  postWithMultipleMedia.hs  public.hs  search.hs  searchSource.hs  simple.hs  twitter-conduit-sample.cabal  twitter-conduit-samples.cabal  twitter-enumerator-samples.cabal  unfav.hs  userstream.hs  userstreamRaw.hs
sample/common/: Common.hs
src/Web/Twitter/: Conduit.hs
src/Web/Twitter/Conduit/: Api.hs  Base.hs  Cursor.hs  Internal.hs  Lens.hs  Parameters.hs  Recursive.hs  Response.hs  Stream.hs
src/Web/Twitter/Conduit/Internal/: APIRequest.hs  APIResponse.hs  AesonUtil.hs  WithRawValue.hs
test/: test-userstream.hs
tests/: ApiSpec.hs  BaseSpec.hs  StatusSpec.hs  TestUtils.hs  doctests.hs  hlint.hs  spec_main.hs
