name:              twitter-conduit
version:           0.4.0
license:           BSD3
license-file:      LICENSE
author:            HATTORI Hiroki, Hideyuki Tanaka, Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter API package with conduit interface and Streaming API support.
category:          Web, Conduit
stability:         Experimental
cabal-version:     >= 1.10
build-type:        Custom
homepage:          https://github.com/himura/twitter-conduit

tested-with:       GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

description:
  This package provides bindings to Twitter's APIs (see <https://dev.twitter.com/>).
  .
  This package uses the http-conduit package for accessing the Twitter API (see <http://hackage.haskell.org/package/http-conduit>).
  This package also depends on the twitter-types package (see <http://hackage.haskell.org/package/twitter-types>).
  .
  You can find basic examples in the <https://github.com/himura/twitter-conduit/tree/master/sample> directory.
  .
  This package is under development. If you find something that has not been implemented yet, please send a pull request or open an issue on GitHub.

extra-source-files:
  .gitignore
  .travis.yml
  README.md
  ChangeLog.md
  Warning.hs
  sample/LICENSE
  sample/twitter-conduit-sample.cabal
  sample/*.hs
  sample/common/*.hs
  tests/*.hs

source-repository head
  type: git
  location: git://github.com/himura/twitter-conduit.git

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

flag run-integrated-test
  description: use debug output when running testsuites
  default: False

library
  ghc-options: -Wall

  build-depends:
      base >= 4.9 && < 5
    , aeson >= 0.7.0.5
    , attoparsec >= 0.10
    , authenticate-oauth >= 1.3
    , bytestring >= 0.10.2
    , conduit >= 1.1
    , conduit-extra >= 1.1
    , containers
    , data-default >= 0.3
    , exceptions >= 0.5
    , http-client >= 0.3.0
    , http-conduit >= 2.0 && < 2.4
    , http-types
    , lens >= 4.4
    , lens-aeson >= 1
    , resourcet >= 1.0
    , template-haskell
    , text >= 0.11
    , time
    , transformers >= 0.2.2
    , transformers-base
    , twitter-types >= 0.9
    , twitter-types-lens >= 0.9

  exposed-modules:
    Web.Twitter.Conduit
    Web.Twitter.Conduit.Lens
    Web.Twitter.Conduit.Types
    Web.Twitter.Conduit.Api
    Web.Twitter.Conduit.Stream
    Web.Twitter.Conduit.Status
    Web.Twitter.Conduit.Base
    Web.Twitter.Conduit.Request
    Web.Twitter.Conduit.Response
    Web.Twitter.Conduit.Cursor
    Web.Twitter.Conduit.Parameters
    Web.Twitter.Conduit.Parameters.TH

  default-language: Haskell2010

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests

  build-depends:
      base
    , hlint >= 1.7

  default-language: Haskell2010

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs: tests

  build-depends:
      base
    , doctest

  default-language: Haskell2010

test-suite spec_main
  type: exitcode-stdio-1.0
  main-is: spec_main.hs
  hs-source-dirs: tests

  if flag(run-integrated-test)
    CPP-Options: -DRUN_INTEGRATED_TEST

  build-tool-depends: hspec-discover:hspec-discover >= 2.3.0
  build-depends:
      base
    , aeson
    , attoparsec
    , authenticate-oauth
    , bytestring
    , case-insensitive
    , conduit
    , conduit-extra
    , containers
    , data-default
    , hspec
    , http-client
    , http-conduit
    , http-types
    , lens
    , lens-aeson
    , resourcet
    , template-haskell
    , text
    , time
    , twitter-conduit
    , twitter-types
    , twitter-types-lens

  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    build-depends: network < 2.6


  other-modules:
    Spec
    ApiSpec
    BaseSpec
    StatusSpec
    TestUtils

  default-language: Haskell2010

custom-setup
  setup-depends:
      base
    , Cabal >= 1.24
    , cabal-doctest >= 1 && < 1.1
