cabal-version:      1.24
name:               twitter-conduit
version:            0.6.0
license:            BSD3
license-file:       LICENSE
maintainer:         Takahiro HIMURA <taka@himura.jp>
author:             HATTORI Hiroki, Hideyuki Tanaka, Takahiro HIMURA
stability:          Experimental
tested-with:        ghc ==8.8.4 ghc ==8.10.7 ghc ==9.0.1
homepage:           https://github.com/himura/twitter-conduit
synopsis:
    Twitter API package with conduit interface and Streaming API support.

description:
    This package provides bindings to Twitter's APIs (see <https://dev.twitter.com/>).
    .
    This package uses the http-conduit package for accessing the Twitter API (see <http://hackage.haskell.org/package/http-conduit>).
    This package also depends on the twitter-types package (see <http://hackage.haskell.org/package/twitter-types>).
    .
    You can find basic examples in the <https://github.com/himura/twitter-conduit/tree/master/sample> directory.
    .
    This package is under development. If you find something that has not been implemented yet, please send a pull request or open an issue on GitHub.

category:           Web, Conduit
build-type:         Custom
extra-source-files:
    .gitignore
    README.md
    ChangeLog.md
    Warning.hs
    sample/LICENSE
    sample/twitter-conduit-sample.cabal
    sample/*.hs
    sample/common/*.hs
    tests/*.hs

source-repository head
    type:     git
    location: git://github.com/himura/twitter-conduit.git

custom-setup
    setup-depends:
        base,
        Cabal >=1.24,
        cabal-doctest >=1 && <1.1

flag run-integrated-test
    description: use debug output when running testsuites
    default:     False

library
    exposed-modules:
        Web.Twitter.Conduit
        Web.Twitter.Conduit.Lens
        Web.Twitter.Conduit.Types
        Web.Twitter.Conduit.Api
        Web.Twitter.Conduit.Stream
        Web.Twitter.Conduit.Status
        Web.Twitter.Conduit.Base
        Web.Twitter.Conduit.Request
        Web.Twitter.Conduit.Request.Internal
        Web.Twitter.Conduit.Response
        Web.Twitter.Conduit.Cursor
        Web.Twitter.Conduit.Parameters

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        aeson >=0.7.0.5,
        attoparsec >=0.10,
        authenticate-oauth >=1.3,
        bytestring >=0.10.2,
        conduit >=1.3,
        conduit-extra >=1.3,
        containers,
        data-default >=0.3,
        exceptions >=0.5,
        ghc-prim,
        http-client >=0.5.0,
        http-conduit >=2.3 && <2.4,
        http-types,
        lens >=4.4,
        lens-aeson >=1,
        resourcet >=1.0,
        text >=0.11,
        time,
        transformers >=0.2.2,
        twitter-types >=0.9,
        twitter-types-lens >=0.9

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        base,
        doctest

test-suite spec_main
    type:               exitcode-stdio-1.0
    main-is:            spec_main.hs
    build-tool-depends: hspec-discover:hspec-discover >=2.3.0
    hs-source-dirs:     tests
    other-modules:
        Spec
        ApiSpec
        BaseSpec
        StatusSpec
        TestUtils

    default-language:   Haskell2010
    build-depends:
        base,
        aeson,
        attoparsec,
        authenticate-oauth,
        bytestring,
        conduit,
        conduit-extra,
        containers,
        data-default,
        hspec,
        http-client,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        resourcet,
        text,
        time,
        twitter-conduit,
        twitter-types,
        twitter-types-lens

    if flag(run-integrated-test)
        cpp-options: -DRUN_INTEGRATED_TEST
