name:              twitter-enumerator
version:           0.0.1.2
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        taka@himura.jp
synopsis:          Twitter API package with enumerator interface and Streaming API support.
description:       This package uses enumerator package for access Twitter API.
category:          Web, Enumerator
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/himura/twitter-enumerator

source-repository head
  type: git
  location: git://github.com/himura/twitter-enumerator.git

source-repository this
  type: git
  location: git://github.com/himura/twitter-enumerator.git
  tag: 0.0.1.1

library
  ghc-options: -Wall

  build-depends:
      base >= 4 && < 5
    , mtl
    , authenticate >= 0.9 && < 0.11
    , enumerator >= 0.4.14 && < 0.5
    , http-types
    , http-enumerator >= 0.6.6
    , aeson >= 0.3.2.2
    , attoparsec >= 0.8.6.1
    , attoparsec-enumerator
    , bytestring
    , text
    , containers

  exposed-modules:
    Web.Twitter.Enumerator
    Web.Twitter.Enumerator.Types
    Web.Twitter.Enumerator.Monad
    Web.Twitter.Enumerator.Fetch

  other-modules:
    Web.Twitter.Enumerator.Utils
