name:              twitter-enumerator
version:           0.0.2
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        taka@himura.jp
synopsis:          Twitter API package with enumerator interface and Streaming API support.
description:       This package uses enumerator package for access Twitter API.
category:          Web, Enumerator
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/himura/twitter-enumerator

source-repository head
  type: git
  location: git://github.com/himura/twitter-enumerator.git

source-repository this
  type: git
  location: git://github.com/himura/twitter-enumerator.git
  tag: 0.0.2

library
  ghc-options: -Wall

  build-depends:
      base >= 4 && < 5
    , mtl >= 2
    , transformers >= 0.2 && < 0.3
    , authenticate >= 0.11 && < 0.12
    , conduit >= 0.0 && < 0.2
    , http-types
    , http-conduit >= 1.1 && < 1.3
    , aeson >= 0.3.2.2
    , attoparsec >= 0.8.6.1
    , attoparsec-conduit
    , bytestring
    , text
    , containers

  exposed-modules:
    Web.Twitter.Enumerator
    Web.Twitter.Enumerator.Types
    Web.Twitter.Enumerator.Monad
    Web.Twitter.Enumerator.Api
    Web.Twitter.Enumerator.Fetch
    Web.Twitter.Enumerator.Post

  other-modules:
    Web.Twitter.Enumerator.Utils

executable oslist
  main-is: oslist.hs
  hs-source-dirs: sample

  build-depends: base >= 4 && < 5
               , mtl >= 2
               , containers
               , conduit >= 0.0
               , directory >= 1.1 && < 1.2
               , filepath >= 1.2 && < 1.3
               , attoparsec >= 0.10 && < 0.11
               , bytestring >= 0.9 && < 0.10
               , case-insensitive >= 0.4 && < 0.5
               , aeson >= 0.6 && < 0.7
               , http-conduit >= 1.1
               , network >= 2.3 && < 2.4
               , authenticate >= 0.11 && < 0.12
               , twitter-enumerator
