name:              twitter-conduit-sample
version:           0.1
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter API package with conduit interface and Streaming API support.
category:          Web, Conduit
stability:         Experimental
cabal-version:     >= 1.10
build-type:        Simple
homepage:          https://github.com/himura/twitter-conduit

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
  ghc-options: -Wall
  hs-source-dirs: common

  build-depends:
      base >= 4.5 && < 5
    , bytestring
    , case-insensitive
    , conduit
    , conduit-extra
    , containers
    , directory
    , filepath
    , http-conduit >= 2.3.0
    , lens
    , process
    , resourcet
    , text
    , transformers
    , twitter-conduit
    , twitter-types-lens

  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    build-depends: network < 2.6

  default-language:    Haskell2010
  exposed-modules:
    Common

executable fav
  main-is: fav.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , lens
    , twitter-conduit
    , twitter-conduit-sample
  default-language:    Haskell2010
  ghc-options:         -Wall

executable oauth_callback
  main-is: oauth_callback.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , authenticate-oauth
    , bytestring
    , containers
    , http-types
    , scotty >= 0.7
    , text
    , transformers
    , twitter-conduit
  default-language:    Haskell2010
  ghc-options:         -Wall

executable oauth_pin
  main-is: oauth_pin.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , authenticate-oauth
    , bytestring
    , text
    , twitter-conduit
  default-language:    Haskell2010
  ghc-options:         -Wall

executable oslist
  main-is: oslist.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , conduit
    , containers
    , twitter-conduit
    , twitter-conduit-sample
  default-language:    Haskell2010
  ghc-options:         -Wall

executable post
  main-is: post.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , text
    , twitter-conduit
    , twitter-conduit-sample
  default-language:    Haskell2010
  ghc-options:         -Wall

executable postWithMedia
  main-is: postWithMedia.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , text
    , twitter-conduit
    , twitter-conduit-sample
  default-language:    Haskell2010
  ghc-options:         -Wall

executable postWithMultipleMedia
  main-is: postWithMultipleMedia.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , lens
    , text
    , twitter-conduit
    , twitter-conduit-sample
    , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall

executable search
  main-is: search.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , lens
    , text
    , twitter-conduit
    , twitter-conduit-sample
    , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall

executable searchSource
  main-is: searchSource.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , conduit
    , lens
    , text
    , twitter-conduit
    , twitter-conduit-sample
    , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall

executable simple
  main-is: simple.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , authenticate-oauth
    , bytestring
    , conduit
    , lens
    , resourcet
    , text
    , twitter-conduit
    , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall

executable userstream
  main-is: userstream.hs
  hs-source-dirs: .

  build-depends:
      base >= 4.5 && < 5
    , conduit
    , conduit-extra
    , directory
    , filepath
    , http-conduit
    , lens
    , process
    , resourcet
    , text
    , transformers
    , twitter-conduit
    , twitter-conduit-sample
    , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall
