name:              twitter-conduit-samples
version:           0
build-type:        Simple
cabal-version:     >= 1.6

library
  ghc-options: -Wall -O2
  build-depends:
      base >= 4 && < 5
    , transformers >= 0.2 && < 0.3
    , containers
    , twitter-enumerator
    , authenticate >= 0.9 && < 0.11
    , tls-extra >= 0.4 && < 0.4.3
    , enumerator >= 0.4.14 && < 0.5
    , http-types
    , http-enumerator >= 0.6.6 && < 0.7.3
    , aeson >= 0.3.2.2
    , attoparsec >= 0.8.6.1
    , bytestring
    , text
    , case-insensitive
    , filepath
    , directory
    , network
  exposed-modules:
      Common
      Secret

executable Twitter2Notify
  main-is: Twitter2Notify.hs
  ghc-options: -Wall -O2
  build-depends:
      transformers
    , text
    , process
  other-modules:
      Common
      Secret

executable oslist
  main-is: oslist.hs
  hs-source-dirs: sample

  ghc-options: -Wall

  build-depends:
      base == 4.*
    , mtl == 2.0.*
    , containers == 0.4.*
    , conduit == 0.4.*
    , resourcet
    , directory == 1.1.*
    , filepath >= 1.2
    , attoparsec == 0.10.*
    , bytestring == 0.9.*
    , case-insensitive == 0.4.*
    , aeson == 0.6.*
    , http-conduit == 1.4.*
    , network == 2.3.*
    , authenticate-oauth == 1.3.*
    , twitter-conduit

executable userstream
  main-is: userstream.hs
  hs-source-dirs: sample

  ghc-options: -Wall

  build-depends:
      base == 4.*
    , mtl == 2.0.*
    , containers == 0.4.*
    , conduit == 0.4.*
    , resourcet
    , directory == 1.1.*
    , filepath >= 1.2
    , attoparsec == 0.10.*
    , bytestring == 0.9.*
    , case-insensitive == 0.4.*
    , aeson == 0.6.*
    , http-conduit == 1.4.*
    , network == 2.3.*
    , authenticate-oauth == 1.3.*
    , twitter-conduit
