name:              twitter-conduit-samples
version:           0
build-type:        Simple
cabal-version:     >= 1.6

library
  ghc-options: -Wall -O2
  build-depends:
      base >= 4 && < 5
    , mtl == 2.0.*
    , lifted-base >= 0.1
    , monad-control
    , authenticate-oauth == 1.3.*
    , conduit == 0.4.*
    , resourcet == 0.3.*
    , http-types
    , http-conduit == 1.4.*
    , aeson == 0.6.*
    , attoparsec == 0.10.*
    , attoparsec-conduit
    , data-default
    , bytestring
    , text
    , containers
    ,twitter-conduit
  exposed-modules:
      Common
      Secret

executable oslist
  main-is: oslist.hs

  ghc-options: -Wall

  build-depends:
      base == 4.*
    , mtl == 2.0.*
    , containers == 0.4.*
    , conduit == 0.4.*
    , resourcet
    , directory == 1.1.*
    , filepath >= 1.2
    , attoparsec == 0.10.*
    , bytestring == 0.9.*
    , case-insensitive == 0.4.*
    , aeson == 0.6.*
    , http-conduit == 1.4.*
    , network == 2.3.*
    , authenticate-oauth == 1.3.*
    , twitter-conduit

executable userstream
  main-is: userstream.hs

  ghc-options: -Wall

  build-depends:
      base == 4.*
    , mtl == 2.0.*
    , containers == 0.4.*
    , conduit == 0.4.*
    , resourcet
    , directory == 1.1.*
    , filepath >= 1.2
    , attoparsec == 0.10.*
    , bytestring == 0.9.*
    , case-insensitive == 0.4.*
    , aeson == 0.6.*
    , http-conduit == 1.4.*
    , network == 2.3.*
    , authenticate-oauth == 1.3.*
    , twitter-conduit
