name:              twitter-enumerator-samples
version:           0
build-type:        Simple
cabal-version:     >= 1.6

library
  ghc-options: -Wall -O2
  build-depends:
      base >= 4 && < 5
    , transformers >= 0.2 && < 0.3
    , containers
    , twitter-enumerator
    , authenticate >= 0.9 && < 0.11
    , tls-extra >= 0.4 && < 0.4.3
    , enumerator >= 0.4.14 && < 0.5
    , http-types
    , http-enumerator >= 0.6.6 && < 0.7.3
    , aeson >= 0.3.2.2
    , attoparsec >= 0.8.6.1
    , bytestring
    , text
    , case-insensitive
    , filepath
    , directory
    , network
  exposed-modules:
      Common

executable Twitter2Notify
  main-is: Twitter2Notify.hs
  ghc-options: -Wall -O2
  build-depends:
      transformers
    , text
    , process
  other-modules:
      Common

executable oslist
  main-is: oslist.hs
  ghc-options: -Wall -O2
  other-modules:
      Common
